Improved CLS time by adding defer blocks

--- a/libs/client-web/browse/feature/book/src/lib/components/price-section/price-section.component.html
+++ b/libs/client-web/browse/feature/book/src/lib/components/price-section/price-section.component.html
@@ -53,6 +53,7 @@
       <p-button
         label="Buy now"
         outlined
+        severity="secondary"
         icon="pi pi-shopping-bag"
         styleClass="w-full"
         class="w-full"
