--- a/libs/client-web/browse/feature/book/src/lib/book.component.html
+++ b/libs/client-web/browse/feature/book/src/lib/book.component.html
@@ -1,7 +1,7 @@
-@if (loading()) {
-  <div
-    class="grid gap-base grid-cols-1 w-full xl:grid-cols-[2fr_3fr] 4xl:grid-cols-[2fr_3fr_1.2fr]"
-  >
+<div
+  class="grid gap-base grid-cols-1 w-full xl:grid-cols-[2fr_3fr] 4xl:grid-cols-[2fr_3fr_1.2fr]"
+>
+  @if (loading()) {
     <div class="rounded-base xl:h-content overflow-hidden xl:sticky xl:top-4">
       <p-skeleton libSkeleton width="100%" height="100%" />
     </div>
@@ -18,51 +18,51 @@
     <div>
       <p-skeleton libSkeleton width="100%" height="24rem" />
     </div>
-  </div>
-} @else if (error()) {
-  <div class="flex flex-col items-center gap-4 mt-10">
-    <p class="text-5xl text-center">{{ error() }}</p>
-    <p class="text-xl text-muted-color">
-      Unable to load book details. Please try again.
-    </p>
-    <p-button
-      label="Retry"
-      icon="pi pi-refresh"
-      (onClick)="getBook()"
-      severity="secondary"
-    ></p-button>
-  </div>
-} @else if (book()) {
-  <div
-    class="grid gap-base grid-cols-1 w-full lg:grid-cols-[2fr_3fr] 4xl:grid-cols-[2fr_3fr_1.2fr]"
-  >
+  } @else if (error()) {
+    <div class="flex flex-col items-center gap-4 mt-10">
+      <p class="text-5xl text-center">{{ error() }}</p>
+      <p class="text-xl text-muted-color">
+        Unable to load book details. Please try again.
+      </p>
+      <p-button
+        label="Retry"
+        icon="pi pi-refresh"
+        (onClick)="getBook()"
+        severity="secondary"
+      ></p-button>
+    </div>
+  } @else if (book()) {
     <div
       class="relative rounded-base hidden lg:flex items-center h-96 justify-center lg:h-[calc(100svh-2*1rem-5rem)] xl:h-content overflow-hidden lg:sticky lg:top-1 xl:top-4"
     >
-      <img
-        class="rounded-base w-full h-full"
-        [ngSrc]="book()?.coverImage ?? ''"
-        [alt]="book()?.title + ' cover image'"
-        fill
-        priority
-      />
+      @defer {
+        <img
+          class="rounded-base w-full h-full"
+          [ngSrc]="book()?.coverImage ?? ''"
+          [alt]="book()?.title + ' cover image'"
+          fill
+          priority
+        />
+      }
     </div>
-    <div class="flex flex-col">
-      <lib-book-details />
+    @defer {
+      <div class="flex flex-col">
+        <lib-book-details />
 
-      <div class="@container flex flex-col gap-4">
-        <h3 libSectionHeader>Reviews</h3>
-        <lib-reviews-summary />
-        <lib-reviews />
+        <div class="@container flex flex-col gap-4">
+          <h3 libSectionHeader>Reviews</h3>
+          <lib-reviews-summary />
+          <lib-reviews />
+        </div>
       </div>
-    </div>
 
-    <div class="hidden 4xl:flex h-content w-full">
-      <div
-        class="4xl:sticky 4xl:top-4 flex flex-col gap-12 overflow-y-auto h-fit w-full p-base bg-content-background rounded-base"
-      >
-        <lib-price-section />
+      <div class="hidden 4xl:flex h-content w-full">
+        <div
+          class="4xl:sticky 4xl:top-4 flex flex-col gap-12 overflow-y-auto h-fit w-full p-base bg-content-background rounded-base"
+        >
+          <lib-price-section />
+        </div>
       </div>
-    </div>
-  </div>
-}
+    }
+  }
+</div>
