--- a/libs/client-web/core/feature/nav/src/lib/nav.component.html
+++ b/libs/client-web/core/feature/nav/src/lib/nav.component.html
@@ -43,128 +43,129 @@
   </div>
 </p-drawer>
 
-<aside
-  class="hidden justify-between gap-4 xl:h-content px-2 py-4 bg-content-background xl:sticky z-[1001] top-4 flex-col rounded-base xl:flex"
-  [@slideInOut]="isExpanded() ? 'in' : 'out'"
->
-  <nav class="h-content flex flex-col justify-between">
-    <div class="flex flex-col">
-      <div class="h-9 flex items-center justify-center">
-        @if (isLabelShowed()) {
-          <ng-container [ngTemplateOutlet]="logo" />
-        } @else {
+@defer (hydrate on idle) {
+  <aside
+    class="hidden justify-between gap-4 xl:h-content px-2 py-4 bg-content-background xl:sticky z-[1001] top-4 flex-col rounded-base xl:flex"
+    [@slideInOut]="isExpanded() ? 'in' : 'out'"
+  >
+    <nav class="h-content flex flex-col justify-between">
+      <div class="flex flex-col">
+        <div class="h-9 flex items-center justify-center">
+          @if (isLabelShowed()) {
+            <ng-container [ngTemplateOutlet]="logo" />
+          } @else {
+            <a
+              [routerLink]="urls().home"
+              routerLinkActive="bg-surface-50 dark:bg-surface-800 rounded-base"
+              class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-100 hover:dark:bg-surface-700"
+            >
+              <i class="pi pi-home"></i>
+            </a>
+          }
+        </div>
+        <p-divider />
+        <ul class="flex flex-col">
           <a
-            [routerLink]="urls().home"
-            routerLinkActive="bg-surface-50 dark:bg-surface-800 rounded-base"
+            [routerLink]="urls().books"
+            routerLinkActive="bg-surface-50 dark:bg-surface-800"
+            class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-100 hover:dark:bg-surface-700"
+            [queryParams]="null"
+            [state]="{ clearFilters: true }"
+          >
+            <i class="pi pi-search"></i>
+            @if (isLabelShowed()) {
+              <span>Browse</span>
+            }
+          </a>
+          <ng-container [ngTemplateOutlet]="links" />
+        </ul>
+      </div>
+
+      <div class="flex flex-col">
+        <lib-cart-sidebar [isLabelShowed]="isLabelShowed()" />
+        @if (isAuthenticated()) {
+          <a
+            [routerLink]="urls().favouriteBooksList"
             class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-100 hover:dark:bg-surface-700"
           >
-            <i class="pi pi-home"></i>
+            <i class="pi pi-heart"></i>
+            @if (isLabelShowed()) {
+              <span>Favourite books</span>
+            }
+          </a>
+          <a
+            [routerLink]="urls().orders"
+            class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-100 hover:dark:bg-surface-700"
+          >
+            <i class="pi pi-user"></i>
+            @if (isLabelShowed()) {
+              <span>Account</span>
+            }
+          </a>
+          <button
+            (click)="logout()"
+            class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-100 hover:dark:bg-surface-700"
+          >
+            <i class="pi pi-sign-in"></i>
+            @if (isLabelShowed()) {
+              <span>Log out</span>
+            }
+          </button>
+        } @else {
+          <a
+            [routerLink]="urls().login"
+            routerLinkActive="bg-surface-100 dark:bg-surface-700"
+            class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-100 hover:dark:bg-surface-700"
+          >
+            <i class="pi pi-sign-in"></i>
+            @if (isLabelShowed()) {
+              <span>Log in</span>
+            }
+          </a>
+          <a
+            [routerLink]="urls().register"
+            routerLinkActive="bg-surface-100 dark:bg-surface-700"
+            class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-100 hover:dark:bg-surface-700"
+          >
+            <i class="pi pi-user-plus"></i>
+            @if (isLabelShowed()) {
+              <span>Register</span>
+            }
           </a>
         }
+        <p-divider />
+        <div class="flex flex-col gap-2">
+          <button
+            (click)="toggleDarkMode()"
+            class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-100 hover:dark:bg-surface-700"
+          >
+            @if (isDark()) {
+              <i class="pi pi-moon"></i>
+            } @else {
+              <i class="pi pi-sun"></i>
+            }
+            @if (isLabelShowed()) {
+              <span>{{ isDark() ? 'Dark' : 'Light' }}</span>
+            }
+          </button>
+          <button
+            (click)="expandCollapseNavigation()"
+            class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-100 hover:dark:bg-surface-700"
+          >
+            @if (isExpanded()) {
+              <i class="pi pi-arrow-left"></i>
+            } @else {
+              <i class="pi pi-arrow-right"></i>
+            }
+            @if (isLabelShowed()) {
+              <span>Collapse</span>
+            }
+          </button>
+        </div>
       </div>
-      <p-divider />
-      <ul class="flex flex-col">
-        <a
-          [routerLink]="urls().books"
-          routerLinkActive="bg-surface-50 dark:bg-surface-800"
-          class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-100 hover:dark:bg-surface-700"
-          [queryParams]="null"
-          [state]="{ clearFilters: true }"
-        >
-          <i class="pi pi-search"></i>
-          @if (isLabelShowed()) {
-            <span>Browse</span>
-          }
-        </a>
-        <ng-container [ngTemplateOutlet]="links" />
-      </ul>
-    </div>
-
-    <div class="flex flex-col">
-      <lib-cart-sidebar [isLabelShowed]="isLabelShowed()" />
-      @if (isAuthenticated()) {
-        <a
-          [routerLink]="urls().favouriteBooksList"
-          class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-100 hover:dark:bg-surface-700"
-        >
-          <i class="pi pi-heart"></i>
-          @if (isLabelShowed()) {
-            <span>Favourite books</span>
-          }
-        </a>
-        <a
-          [routerLink]="urls().orders"
-          class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-100 hover:dark:bg-surface-700"
-        >
-          <i class="pi pi-user"></i>
-          @if (isLabelShowed()) {
-            <span>Account</span>
-          }
-        </a>
-        <button
-          (click)="logout()"
-          class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-100 hover:dark:bg-surface-700"
-        >
-          <i class="pi pi-sign-in"></i>
-          @if (isLabelShowed()) {
-            <span>Log out</span>
-          }
-        </button>
-      } @else {
-        <a
-          [routerLink]="urls().login"
-          routerLinkActive="bg-surface-100 dark:bg-surface-700"
-          class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-100 hover:dark:bg-surface-700"
-        >
-          <i class="pi pi-sign-in"></i>
-          @if (isLabelShowed()) {
-            <span>Log in</span>
-          }
-        </a>
-        <a
-          [routerLink]="urls().register"
-          routerLinkActive="bg-surface-100 dark:bg-surface-700"
-          class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-100 hover:dark:bg-surface-700"
-        >
-          <i class="pi pi-user-plus"></i>
-          @if (isLabelShowed()) {
-            <span>Register</span>
-          }
-        </a>
-      }
-      <p-divider />
-      <div class="flex flex-col gap-2">
-        <button
-          (click)="toggleDarkMode()"
-          class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-100 hover:dark:bg-surface-700"
-        >
-          @if (isDark()) {
-            <i class="pi pi-moon"></i>
-          } @else {
-            <i class="pi pi-sun"></i>
-          }
-          @if (isLabelShowed()) {
-            <span>{{ isDark() ? 'Dark' : 'Light' }}</span>
-          }
-        </button>
-        <button
-          (click)="expandCollapseNavigation()"
-          class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-100 hover:dark:bg-surface-700"
-        >
-          @if (isExpanded()) {
-            <i class="pi pi-arrow-left"></i>
-          } @else {
-            <i class="pi pi-arrow-right"></i>
-          }
-          @if (isLabelShowed()) {
-            <span>Collapse</span>
-          }
-        </button>
-      </div>
-    </div>
-  </nav>
-</aside>
-
+    </nav>
+  </aside>
+}
 <ng-template #logo>
   <a
     [routerLink]="urls().home"
