--- a/libs/client-web/browse/feature/book/src/lib/components/book-details/book-details.component.html
+++ b/libs/client-web/browse/feature/book/src/lib/components/book-details/book-details.component.html
@@ -2,13 +2,13 @@
   <div class="flex flex-col gap-base w-full">
     <p-breadcrumb [model]="breadcrumbs()" />
     <div
-      class="grid grid-cols-1 md:grid-cols-[1fr_2fr] gap-base lg:grid-cols-1"
+      class="grid grid-cols-1 md:grid-cols-[1fr_2fr] 2xl:grid-cols-1 gap-base"
     >
       <div
-        class="relative rounded-base flex lg:hidden items-center h-96 justify-center lg:h-[calc(100svh-2*1rem-5rem)] xl:h-content overflow-hidden lg:sticky lg:top-1 xl:top-4"
+        class="relative rounded-base flex 2xl:hidden items-center h-96 justify-center"
       >
         <img
-          class="rounded-base !w-fit lg:!w-full h-full"
+          class="rounded-base !w-fit 2xl:!w-full h-full"
           [ngSrc]="book()?.coverImage ?? ''"
           [alt]="book()?.title + ' cover image'"
           width="350"
@@ -16,7 +16,7 @@
         />
       </div>
       <div class="flex flex-col gap-base w-full">
-        <h3 class="text-3xl md:text-4xl lg:text-5xl xl:text-8xl">
+        <h3 class="text-3xl md:text-4xl lg:text-5xl 4xl:text-6xl">
           {{ book()?.title }}
         </h3>
         <div class="flex flex-wrap gap-4 mb-8">
@@ -30,7 +30,7 @@
           <p-tag class="w-fit" [value]="book()?.tag" />
         }
         <div
-          class="flex flex-col justify-start my-8 gap-4 bg-content-background p-4 rounded-base xl:gap-8 4xl:hidden"
+          class="flex flex-col justify-start mt-8 gap-4 bg-content-background p-4 rounded-base xl:gap-8 4xl:hidden"
         >
           <lib-price-section />
         </div>
