--- a/libs/client-web/account/feature/information/src/lib/components/account-data/account-data.component.html
+++ b/libs/client-web/account/feature/information/src/lib/components/account-data/account-data.component.html
@@ -12,7 +12,9 @@
         class="flex items-center justify-between @container"
       >
         <div class="flex flex-col @lg:flex-row">
-          <span class="min-w-24 text-muted-color">Email</span>
+          <span class="min-w-24 text-sm font-semibold text-muted-color">
+            Email
+          </span>
           <span>{{ user()?.email }}</span>
         </div>
         <p-button
@@ -29,7 +31,9 @@
         class="flex items-center justify-between @container"
       >
         <div class="flex flex-col @lg:flex-row">
-          <span class="min-w-24 text-muted-color">Password</span>
+          <span class="min-w-24 text-sm font-semibold text-muted-color">
+            Password
+          </span>
           <span>******</span>
         </div>
         <p-button
