--- a/libs/client-web/browse/feature/book/src/lib/components/price-section/price-section.component.html
+++ b/libs/client-web/browse/feature/book/src/lib/components/price-section/price-section.component.html
@@ -1,4 +1,4 @@
-<h4 class="text-4xl font-bold md:text-5xl lg:text-6xl xl:text-7xl">
+<h4 class="text-4xl font-bold xl:text-5xl 4xl:text-6xl 6xl:text-7xl">
   {{ book()?.price | currency: 'USD' }}
 </h4>
 <div class="flex flex-col gap-base w-full">
