--- a/libs/client-web/browse/ui/src/lib/detail-row/detail-row.component.html
+++ b/libs/client-web/browse/ui/src/lib/detail-row/detail-row.component.html
@@ -1,4 +1,4 @@
 <div class="flex flex-row items-center gap-2">
-  <span class="text-muted-color font-medium w-32">{{ label() }}</span>
-  <div class="text-2xl">{{ value() ?? '-' }}</div>
+  <span class="text-muted-color text-sm font-medium w-32">{{ label() }}</span>
+  <div class="text-lg">{{ value() ?? '-' }}</div>
 </div>
