--- a/libs/client-web/shared/ui/src/lib/address-information/address-information.component.html
+++ b/libs/client-web/shared/ui/src/lib/address-information/address-information.component.html
@@ -6,13 +6,13 @@
     (click)="select()"
   >
     <div class="flex gap-4 justify-start">
-      <span class="text-sm text-muted-color font-semi w-24 text-start">
+      <span class="text-sm text-muted-color font-semibold w-24 text-start">
         Phone
       </span>
       <span class="text-base !text-start">{{ address()?.phone }}</span>
     </div>
     <div class="flex gap-4 justify-start">
-      <span class="text-sm text-muted-color font-semi w-24 text-start">
+      <span class="text-sm text-muted-color font-semibold w-24 text-start">
         Name
       </span>
       <span class="text-base flex justify-start">
@@ -21,7 +21,7 @@
       </span>
     </div>
     <div class="flex gap-4">
-      <span class="text-sm text-muted-color font-semi min-w-24 text-start">
+      <span class="text-sm text-muted-color font-semibold min-w-24 text-start">
         Address
       </span>
       <div class="flex flex-col items-start">
