--- a/libs/client-web/shared/ui/src/lib/book-card/book-card.component.html
+++ b/libs/client-web/shared/ui/src/lib/book-card/book-card.component.html
@@ -1,21 +1,22 @@
 <div
   [routerLink]="appRoutePaths.BOOK(book().id)"
-  class="flex flex-col rounded-base cursor-pointer sm:max-w-book-card w-full bg-content-background"
+  class="flex flex-col rounded-base p-2 cursor-pointer sm:max-w-book-card w-full bg-content-background"
   [ngClass]="{ 'pointer-events-none animate-pulse': loading() }"
 >
-  <div class="w-full h-80 4xl:h-96 rounded-base relative">
+  <div class="w-full h-80 4xl:h-96 rounded-base">
     <img
-      alt="Card"
-      class="w-full h-80 4xl:h-96 object-cover rounded-base"
+      [alt]="book().title + 'cover image'"
+      class="!h-full !w-auto mx-auto !aspect-[3/4] object-fill rounded-base"
       [ngSrc]="
         book().coverImage ? book().coverImage! : 'assets/images/not-found.png'
       "
-      fill
+      width="480"
+      height="640"
     />
   </div>
-  <div class="flex flex-col gap-base p-base">
+  <div class="flex flex-col gap-base p-2">
     <div class="flex flex-col gap-1">
-      <h3 class="text-base font-bold">{{ book().title }}</h3>
+      <h3 class="text-base font-bold truncate">{{ book().title }}</h3>
       <div class="h-12 overflow-hidden">
         <div class="flex flex-wrap gap-x-4 gap-y-2">
           @for (author of book().authors; track author.id) {
