Optimized changing number of the cards to display on the home page

--- a/libs/client-web/browse/feature/books/src/lib/books.component.html
+++ b/libs/client-web/browse/feature/books/src/lib/books.component.html
@@ -41,6 +41,7 @@
       [books]="books()"
       [loading]="loading()"
       [error]="error()"
+      [skeletonsCount]="size()"
       [favouriteBooks]="favouriteBooks()"
       (addToCartEvent)="addToCart($event)"
       (onAddToFavourite)="addToFavourite($event)"
