--- a/libs/client-web/shared/ui/src/lib/books-grid/books-grid.component.html
+++ b/libs/client-web/shared/ui/src/lib/books-grid/books-grid.component.html
@@ -1,6 +1,7 @@
 <div class="flex @container">
   <div
     class="w-full grid grid-cols-1 gap-base @md:grid-cols-2 @2xl:grid-cols-3 @4xl:grid-cols-4 @6xl:grid-cols-5 @7xl:grid-cols-6 @10xl:grid-cols-7 @11xl:grid-cols-8 @12xl:grid-cols-9 @13xl:grid-cols-10 @14xl:grid-cols-11"
+    [class.grid-flow-col]="displayOneRow()"
   >
     @if (loading() && books().length === 0) {
       @for (_ of skeleconts(); track $index) {
