--- a/libs/client-web/browse/ui/src/lib/accordion-filter-header/accordion-filter-header.component.html
+++ b/libs/client-web/browse/ui/src/lib/accordion-filter-header/accordion-filter-header.component.html
@@ -10,6 +10,7 @@
     icon="pi pi-trash"
     [disabled]="selectedItemsCount() === 0"
     [text]="true"
+    ariaLabel="Clear filter"
     (onClick)="$event.stopImmediatePropagation(); clearFilter()"
   />
 </div>
