--- a/libs/client-web/account/feature/information/src/lib/components/account-data/account-data.component.html
+++ b/libs/client-web/account/feature/information/src/lib/components/account-data/account-data.component.html
@@ -23,6 +23,7 @@
           tooltipPosition="left"
           showDelay="300"
           icon="pi pi-pencil"
+          ariaLabel="Edit email"
         />
       </div>
 
@@ -38,10 +39,11 @@
         </div>
         <p-button
           (onClick)="setEditingField('password')"
-          pTooltip="Edit email"
+          pTooltip="Edit password"
           tooltipPosition="left"
           showDelay="300"
           icon="pi pi-pencil"
+          ariaLabel="Edit password"
         />
       </div>
     }
