--- a/libs/client-web/cart/ui/src/lib/cart-item/cart-item.component.html
+++ b/libs/client-web/cart/ui/src/lib/cart-item/cart-item.component.html
@@ -52,11 +52,13 @@
         <p-button
           (onClick)="remove()"
           [text]="true"
+          ariaLabel="Remove"
           icon="pi pi-trash"
           size="small"
           class="@xl/cart-item:hidden"
         />
         <p-button
+          ariaLabel="Remove"
           (onClick)="remove()"
           [text]="true"
           icon="pi pi-trash"
@@ -65,6 +67,7 @@
         />
       } @else {
         <p-button
+          ariaLabel="Decrease quantity"
           (onClick)="decrease()"
           [text]="true"
           icon="pi pi-minus"
@@ -72,6 +75,7 @@
           class="@xl/cart-item:hidden"
         />
         <p-button
+          ariaLabel="Decrease quantity"
           (onClick)="decrease()"
           [text]="true"
           icon="pi pi-minus"
@@ -81,6 +85,7 @@
       }
       <span>{{ item().quantity }}</span>
       <p-button
+        ariaLabel="Increase quantity"
         (onClick)="increase()"
         [text]="true"
         icon="pi pi-plus"
@@ -88,6 +93,7 @@
         class="@xl/cart-item:hidden"
       />
       <p-button
+        ariaLabel="Increase quantity"
         (onClick)="increase()"
         [text]="true"
         icon="pi pi-plus"
