--- a/libs/client-web/core/feature/nav/src/lib/nav.component.html
+++ b/libs/client-web/core/feature/nav/src/lib/nav.component.html
@@ -5,7 +5,7 @@
         libNavButton
         size="large"
         icon="pi pi-bars"
-        (onClick)="toggleMobileDrawer()"
+        (onClick)="toggleMobileMenuDrawer()"
       />
       <p-button
         libNavButton
@@ -45,7 +45,7 @@
 
 @defer (hydrate on idle) {
   <aside
-    class="hidden justify-between gap-4 xl:h-content px-2 py-4 bg-content-background xl:sticky z-[1001] top-4 flex-col rounded-base xl:flex"
+    class="hidden justify-between gap-4 xl:h-content overflow-auto scrollbar-thin px-2 py-4 bg-content-background xl:sticky z-[1001] top-4 flex-col rounded-base xl:flex"
     [@slideInOut]="isExpanded() ? 'in' : 'out'"
   >
     <nav class="h-content flex flex-col justify-between">
@@ -58,6 +58,7 @@
               [routerLink]="urls().home"
               routerLinkActive="bg-surface-50 dark:bg-surface-800 rounded-base"
               class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-100 hover:dark:bg-surface-700"
+              aria-label="Home"
             >
               <i class="pi pi-home"></i>
             </a>
@@ -65,18 +66,21 @@
         </div>
         <p-divider />
         <ul class="flex flex-col">
-          <a
-            [routerLink]="urls().books"
-            routerLinkActive="bg-surface-50 dark:bg-surface-800"
-            class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-100 hover:dark:bg-surface-700"
-            [queryParams]="null"
-            [state]="{ clearFilters: true }"
-          >
-            <i class="pi pi-search"></i>
-            @if (isLabelShowed?.()) {
-              <span>Browse</span>
-            }
-          </a>
+          <li class="list-none">
+            <a
+              [routerLink]="urls().books"
+              routerLinkActive="bg-surface-50 dark:bg-surface-800"
+              class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-100 hover:dark:bg-surface-700"
+              [queryParams]="null"
+              [state]="{ clearFilters: true }"
+              aria-label="Browse"
+            >
+              <i class="pi pi-search"></i>
+              @if (isLabelShowed?.()) {
+                <span>Browse</span>
+              }
+            </a>
+          </li>
           <ng-container [ngTemplateOutlet]="links" />
         </ul>
       </div>
@@ -87,6 +91,7 @@
           <a
             [routerLink]="urls().favouriteBooksList"
             class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-100 hover:dark:bg-surface-700"
+            aria-label="Favourite books"
           >
             <i class="pi pi-heart"></i>
             @if (isLabelShowed?.()) {
@@ -96,6 +101,7 @@
           <a
             [routerLink]="urls().orders"
             class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-100 hover:dark:bg-surface-700"
+            aria-label="Account"
           >
             <i class="pi pi-user"></i>
             @if (isLabelShowed?.()) {
@@ -105,6 +111,7 @@
           <button
             (click)="logout()"
             class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-100 hover:dark:bg-surface-700"
+            aria-label="Log out"
           >
             <i class="pi pi-sign-in"></i>
             @if (isLabelShowed?.()) {
@@ -116,6 +123,7 @@
             [routerLink]="urls().login"
             routerLinkActive="bg-surface-100 dark:bg-surface-700"
             class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-100 hover:dark:bg-surface-700"
+            aria-label="Log in"
           >
             <i class="pi pi-sign-in"></i>
             @if (isLabelShowed?.()) {
@@ -126,6 +134,7 @@
             [routerLink]="urls().register"
             routerLinkActive="bg-surface-100 dark:bg-surface-700"
             class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-100 hover:dark:bg-surface-700"
+            aria-label="Register"
           >
             <i class="pi pi-user-plus"></i>
             @if (isLabelShowed?.()) {
@@ -136,8 +145,10 @@
         <p-divider />
         <div class="flex flex-col gap-2">
           <button
+            type="button"
             (click)="toggleDarkMode()"
             class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-100 hover:dark:bg-surface-700"
+            [title]="isDark() ? 'Dark' : 'Light'"
           >
             @if (isDark()) {
               <i class="pi pi-moon"></i>
@@ -149,8 +160,10 @@
             }
           </button>
           <button
+            type="button"
             (click)="expandCollapseNavigation()"
             class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-100 hover:dark:bg-surface-700"
+            [title]="isExpanded() ? 'Collapse' : 'Expand'"
           >
             @if (isExpanded()) {
               <i class="pi pi-arrow-left"></i>
@@ -180,31 +193,36 @@
 <ng-template #links>
   @if (isAccountRouteActive()) {
     @for (menuItem of menuItems(); track menuItem.label) {
-      <a
-        (click)="closeMobileDrawer()"
-        [routerLink]="menuItem.routerLink"
-        routerLinkActive="bg-surface-100 dark:bg-surface-700"
-        class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-100 hover:dark:bg-surface-700"
-      >
-        <i [class]="menuItem.icon"></i>
-        @if (isLabelShowed?.()) {
-          <span>{{ menuItem.label }}</span>
-        }
-      </a>
+      <li class="list-none">
+        <a
+          (click)="toggleMobileMenuDrawer()"
+          [routerLink]="menuItem.routerLink"
+          routerLinkActive="bg-surface-100 dark:bg-surface-700"
+          class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-100 hover:dark:bg-surface-700"
+          [name]="menuItem.label"
+          aria-label="Account link"
+        >
+          <i [class]="menuItem.icon"></i>
+          @if (isLabelShowed?.()) {
+            <span>{{ menuItem.label }}</span>
+          }
+        </a>
+      </li>
     }
   } @else {
     @for (category of categories(); track category.id) {
-      <a
-        (click)="closeMobileDrawer()"
-        [routerLink]="urls().books"
-        [queryParams]="{ categories: category.name }"
-        class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-100 hover:dark:bg-surface-700"
-        [state]="{ clearFilters: true }"
-      >
-        <span>
+      <li class="list-none">
+        <a
+          (click)="toggleMobileMenuDrawer()"
+          [routerLink]="urls().books"
+          [queryParams]="{ categories: category.name }"
+          class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-100 hover:dark:bg-surface-700"
+          [state]="{ clearFilters: true }"
+          [name]="category.name"
+        >
           {{ category.name | getName: !!isLabelShowed?.() }}
-        </span>
-      </a>
+        </a>
+      </li>
     }
   }
 </ng-template>
