--- a/libs/client-web/shared/feature/src/lib/address-form/address-form.component.html
+++ b/libs/client-web/shared/feature/src/lib/address-form/address-form.component.html
@@ -111,7 +111,7 @@
   </lib-form-field>
   @if (!isFormChanged() && form.dirty) {
     <p-message libErrorMessage class="mt-2">
-      You haven't changed any value
+      You should change some values to save them.
     </p-message>
   }
 
