--- a/libs/client-web/shared/ui/src/lib/books-grid/books-grid.component.html
+++ b/libs/client-web/shared/ui/src/lib/books-grid/books-grid.component.html
@@ -4,7 +4,7 @@
     [class.grid-flow-col]="displayOneRow()"
   >
     @if (loading() && books().length === 0) {
-      @for (_ of skeleconts(); track $index) {
+      @for (_ of skeletons(); track $index) {
         <lib-book-card-skeleton />
       }
     } @else if (error()) {
@@ -32,6 +32,7 @@
         />
       } @empty {
         <div
+          data-testId="no-books"
           class="w-full mt-12 col-start-1 col-span-full text-center text-4xl font-bold"
         >
           No books were found!
