Fixed adding a review and image preview and add defer block to books-grids

--- a/libs/client-web/cart/ui/src/lib/cart-item/cart-item.component.html
+++ b/libs/client-web/cart/ui/src/lib/cart-item/cart-item.component.html
@@ -8,6 +8,7 @@
       class="relative aspect-[3/4] w-20 h-28 @3xl/cart-item:w-32 @3xl/cart-item:h-40"
     >
       <p-image
+        appendTo="body"
         [preview]="true"
         styleClass="h-full"
         [src]="item().book.coverImage ?? ''"
