Removed unnecessary files and made small improvements

--- a/libs/client-web/cart/feature/cart-sidebar/src/lib/cart-sidebar.component.html
+++ b/libs/client-web/cart/feature/cart-sidebar/src/lib/cart-sidebar.component.html
@@ -27,7 +27,7 @@
     >
       @for (item of cartItems(); track item.book.id) {
         <lib-cart-item
-          [item]="item"
+          [cartItem]="item"
           (onUpdateQuantity)="updateQuantity($event, item.book.id)"
           (onDelete)="remove(item.book.id)"
         />
